--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,8 @@
-{}
+{
+  "plugins": [
+    "prettier-plugin-css-order",
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-tailwindcss"
+  ],
+  "pluginSearchDirs": false
+}
