--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "daisyui": "^2.47.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
@@ -26,7 +27,11 @@
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-css-order": "^1.3.0",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
